--- a/xpra/connect.html
+++ b/xpra/connect.html
@@ -25,6 +25,11 @@
 	<script src="js/lib/es6-shim.js"></script>
 	<script src="js/lib/AudioContextMonkeyPatch.js"></script>
 
+	<script type="text/javascript" src="js/RgbHelpers.js"></script>
+	<script type="text/javascript" src="js/ImageDecoder.js"></script>
+	<script type="text/javascript" src="js/VideoDecoder.js"></script>
+	<script type="text/javascript" src="js/OffscreenDecodeWorkerHelper.js"></script>
+
 	<script src="js/lib/jquery.js"></script>
 	<script src="js/Utilities.js"></script>
 	<script src="js/MediaSourceUtil.js"></script>
@@ -139,11 +144,12 @@
 				  <li class="list-group-item">
 					<select id="encoding">
 					  <option value="auto">Automatic</option>
+					  <option value="webp">WebP</option>
 					  <option value="jpeg">JPEG</option>
 					  <option value="png">PNG</option>
 					  <option value="rgb">Raw RGB</option>
 					</select>
-					Encoding
+					Encoding &nbsp; <input type="checkbox" id="offscreen"> <span id="offscreen_label">offscreen decoding</span>
 				  </li>
 
 				  <li class="list-group-item">
@@ -318,6 +324,7 @@
 			</div>
 		  </div>
 
+		  <input type="hidden" id="vrefresh" value="0" />
 		</form>
 
 
@@ -328,12 +335,15 @@
 <script>
 
 const VALUE_PROPERTIES = ["server", "port", "path", "username", "password", "key",
-					"bandwidth_limit", "encoding", "keyboard_layout", "audio_codec", "toolbar_position",
+					"bandwidth_limit", "encoding",
+					"keyboard_layout", "audio_codec", "toolbar_position",
 					"display", "shadow_display", "override_width",
 					"encryption",
+					"vrefresh",
 					];
 const BOOLEAN_PROPERTIES = ["keyboard", "clipboard", "printing", "file_transfer",
 		"sound", "ignore_audio_blacklist",
+		"offscreen",
 		"exit_with_children", "exit_with_client",
 		"sharing", "steal", "reconnect", "swap_keys",
 		"scroll_reverse_x", "scroll_reverse_y",
@@ -587,11 +597,31 @@ function fill_form(default_settings) {
 		let enc = encryption.split("-")[0];
 		if (enc=="AES") {
 			aes_input.checked = true;
-			aes_input.onchange();
 			let enc_mode = encryption.split("-")[1] || "CBC";
 			document.getElementById("encryption").value = "AES-"+enc_mode;
 		}
 	}
+	aes_input.onchange();
+
+	//vrefresh:
+	let animation_times = [];
+	let vrefresh = -1;
+	function animation_cb(now) {
+		let l = animation_times.push(now);
+		if (l > 100) {
+			animation_times.shift();
+		}
+		let t0 = animation_times[0];
+		if (now>t0 && l>20) {
+			fps = Math.floor(1000 * (l-1) / (now - t0));
+			document.getElementById("vrefresh").value = ""+fps;
+			if (l<=40) {
+				Utilities.debug("draw", "animation_cb", now, "fps", fps);
+			}
+		}
+		window.requestAnimationFrame(animation_cb);
+	};
+	window.requestAnimationFrame(animation_cb);
 
 	//reveal password and aes key:
 	function toggle_reveal(el) {
@@ -687,6 +717,9 @@ function fill_form(default_settings) {
 			}
 			url += path;
 		}
+		if (!url.endsWith("/")) {
+			url += "/";
+		}
 		return url;
 	}
 
@@ -716,14 +749,14 @@ function fill_form(default_settings) {
 		var cc = command_category.options[command_category.selectedIndex].innerHTML;
 		var c = command_entry.options[command_entry.selectedIndex].innerHTML;
 		Utilities.log("command_category=", cc, ", command_entry=", c);
-		load_icon(command_entry_icon, "/MenuIcon/"+cc+"/"+c);
+		load_icon(command_entry_icon, `MenuIcon/${cc}/${c}`);
 		$('#command_entry_icon').show();
 	}
 	command_entry.addEventListener("change", command_entry_changed);
 	function command_category_changed() {
 		var cc = command_category.options[command_category.selectedIndex].innerHTML;
 		Utilities.log("command_category=", cc);
-		load_icon(command_category_icon, "/MenuIcon/"+cc);
+		load_icon(command_category_icon, `MenuIcon/${cc}`);
 		$('#command_category_icon').show();
 	}
 	command_category.addEventListener("change", command_category_changed);
@@ -731,7 +764,7 @@ function fill_form(default_settings) {
 	function init_command_menu() {
 		$('#command_category_icon').hide();
 		$('#command_entry_icon').hide();
-		json_action("/Menu",
+		json_action("Menu",
 		function(xhr, response) {
 			let categories = Object.keys(response);
 			//find the category matching "start":
@@ -795,13 +828,13 @@ function fill_form(default_settings) {
 	function desktop_entry_changed() {
 		var de = desktop_entry.options[desktop_entry.selectedIndex].innerHTML;
 		Utilities.log("desktop_session=", de);
-		load_icon(desktop_entry_icon, "/DesktopMenuIcon/"+de);
+		load_icon(desktop_entry_icon, `DesktopMenuIcon/${de}`);
 	}
 	desktop_entry.addEventListener("change", desktop_entry_changed);
 
 	function init_desktop_menu() {
 		$('#desktop_entry_icon').hide();
-		json_action("/DesktopMenu", function(xhr, response) {
+		json_action("DesktopMenu", function(xhr, response) {
 			var desktop_sessions = Object.keys(response);
 			desktop_entry.innerText = null;
 			let default_start_desktop = start;
@@ -848,7 +881,7 @@ function fill_form(default_settings) {
 
 	const display = getparam("display") || "";
 	function init_shadow_display() {
-		json_action("/Displays", function(xhr, response) {
+		json_action("Displays", function(xhr, response) {
 			var displays = Object.keys(response);
 			const select_shadow_display = document.getElementById("select_shadow_display");
 			select_shadow_display.innerText = null;
@@ -883,7 +916,7 @@ function fill_form(default_settings) {
 	}
 
 	function init_connect_display() {
-		json_action("/Sessions", function(xhr, response) {
+		json_action("Sessions", function(xhr, response) {
 			var sessions = Object.keys(response);
 			const select_display = document.getElementById("select_display");
 			select_display.innerText = null;
@@ -970,8 +1003,8 @@ function fill_form(default_settings) {
 		}
 	}
 	function init_mode() {
-		json_action("/Info", function(xhr, response) {
-			Utilities.log("/Info=", response);
+		json_action("Info", function(xhr, response) {
+			Utilities.log("Info=", response);
 			let mode = response.mode || "";
 			if (mode.indexOf("seamless")>=0 || mode.indexOf("desktop")>=0 || mode.indexOf("shadow")>=0) {
 				show_mode(false);
@@ -1046,6 +1079,15 @@ function fill_form(default_settings) {
 	const encoding = getparam("encoding") || "auto";
 	document.getElementById('encoding').value = encoding;
 
+	const offscreen = getboolparam("offscreen", XpraOffscreenWorker.isAvailable());
+	document.getElementById("offscreen").checked = offscreen;
+	if (!XpraOffscreenWorker.isAvailable()) {
+		document.getElementById("offscreen").disabled = true;
+		document.getElementById("offscreen").setAttribute("title", "not available in your browser");
+		document.getElementById("offscreen_label").classList.add('disabled');
+		document.getElementById("offscreen_label").setAttribute("title", "not available in your browser");
+	}
+
 	let bandwidth_limit = getparam("bandwidth_limit");
 	if(bandwidth_limit==null) {
 		const ci = Utilities.getConnectionInfo();
@@ -1060,7 +1102,7 @@ function fill_form(default_settings) {
 		keyboard_layout = Utilities.getKeyboardLayout();
 	}
 	document.getElementById('keyboard_layout').value = keyboard_layout;
-	json_action("/favicon.png?echo-headers", function(xhr, response) {
+	json_action("favicon.png?echo-headers", function(xhr, response) {
 		const headers = Utilities.ParseResponseHeaders(xhr.getAllResponseHeaders());
 		Utilities.debug("headers:", headers);
 		let lang = headers["Echo-Accept-Language"];
@@ -1122,9 +1164,10 @@ function fill_form(default_settings) {
 		"scroll_reverse_x", "scroll_reverse_y",
 		"debug_main", "debug_keyboard", "debug_geometry", "debug_mouse", "debug_clipboard", "debug_draw", "debug_audio", "debug_network"];
 	const default_on = ["steal", "clipboard", "printing", "file_transfer", "reconnect", "floating_menu", "clock", "exit_with_children", "exit_with_client"];
-	if (Utilities.is_64bit()) {
-		default_on.push("video");
-	}
+	//even on 64-bit, video decoding is too slow
+	//if (Utilities.is_64bit()) {
+	//	default_on.push("video");
+	//}
 	if (Utilities.isMacOS()) {
 		default_on.push("swap_keys");
 		default_on.push("scroll_reverse_y");
