--- a/xpra/index.html
+++ b/xpra/index.html
@@ -1068,6 +1068,7 @@
 					    } else {
 					        $('.simple-keyboard').setOptions({layoutName: 'shift'});
 					    }
+					    window.keyboardShifted = !window.keyboardShifted
 					}
 				}
 				function onKeyReleased(button){
