--- a/xpra/index.html
+++ b/xpra/index.html
@@ -1064,7 +1064,7 @@
 					},
 					buttonTheme: [{
 						class: "hg-red",
-						buttons: "{shift}"
+						buttons: "{expand}"
 					}]
 				});
                                 window.kb = kb;
