--- a/xpra/index.html
+++ b/xpra/index.html
@@ -1056,7 +1056,7 @@
 						"{enter}" : " ↵ ",
 					},
 					buttonTheme: [{
-						class: "hg-button-numpadenter",
+						class: "hg-button-minified",
 						buttons: "{expand}"
 					}]
 				});
