--- a/xpra/index.html
+++ b/xpra/index.html
@@ -1050,10 +1050,10 @@
 						"{minify}" :  " ⌨ ",
 						"{letters}" : " abc ",
 						"{digits}" :  "?#.123",
-						"{shift}" : " ⇫ ",
-						"{bksp}" : " ↤ ",
+						"{shift}" : " 🢁 ",
+						"{bksp}" : " ⭰ ",
 						"{space}" : "			",
-						"{enter}" : " ↵ ",
+						"{enter}" : " ⮨ ",
 					},
 					buttonTheme: [{
 						class: "hg-button-minified",
