--- a/xpra/index.html
+++ b/xpra/index.html
@@ -1053,7 +1053,7 @@
 						"{shift}" : " 🢁 ",
 						"{bksp}" : " ⭰ ",
 						"{space}" : "			",
-						"{enter}" : " ⮨ ",
+						"{enter}" : " ⤶ ",
 					},
 					buttonTheme: [{
 						class: "hg-button-minified",
