--- a/xpra/index.html
+++ b/xpra/index.html
@@ -1050,7 +1050,7 @@
 						"{minify}" :  " ⌨ ",
 						"{letters}" : " abc ",
 						"{digits}" :  "?#.123",
-						"{shift}" : " 🢁 ",
+						"{shift}" : " 🡅 ",
 						"{bksp}" : " ⭰ ",
 						"{space}" : "			",
 						"{enter}" : " ⤶ ",
